<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lerpz1</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_notes">Notes</string>
    <string name="title_activity_settings_page">SettingsPage</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_information_links">InformationLinks</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_text_reader">TextReader</string>
    
	<string name="title">Second Screen App</string>
	
	<string name="notepad_default">Tap here to store notes about your adventure!</string>
	
	<string name="character_lerpz">Lerpz Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer elit nibh, ultrices eget pretium ut, rhoncus quis mi. Praesent tempus vulputate augue suscipit tristique. Fusce interdum risus mi, ut eleifend turpis. Sed lectus nisl, posuere in feugiat nec, congue ut quam. Mauris in felis a orci eleifend volutpat. Aenean placerat arcu in nunc bibendum luctus vel eget mi. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vivamus bibendum sapien a purus interdum non auctor lacus euismod. Morbi et magna dolor, at mollis massa. Aliquam suscipit varius dui, vel ultrices nunc pulvinar quis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Proin eu erat velit. Maecenas viverra enim in augue auctor vestibulum.</string>
	
	<string name="location_a">Location_A Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer elit nibh, ultrices eget pretium ut, rhoncus quis mi. Praesent tempus vulputate augue suscipit tristique. Fusce interdum risus mi, ut eleifend turpis. Sed lectus nisl, posuere in feugiat nec, congue ut quam. Mauris in felis a orci eleifend volutpat. Aenean placerat arcu in nunc bibendum luctus vel eget mi. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vivamus bibendum sapien a purus interdum non auctor lacus euismod. Morbi et magna dolor, at mollis massa. Aliquam suscipit varius dui, vel ultrices nunc pulvinar quis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Proin eu erat velit. Maecenas viverra enim in augue auctor vestibulum.</string>
	
	<string name="location_b">Location_B Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer elit nibh, ultrices eget pretium ut, rhoncus quis mi. Praesent tempus vulputate augue suscipit tristique. Fusce interdum risus mi, ut eleifend turpis. Sed lectus nisl, posuere in feugiat nec, congue ut quam. Mauris in felis a orci eleifend volutpat. Aenean placerat arcu in nunc bibendum luctus vel eget mi. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vivamus bibendum sapien a purus interdum non auctor lacus euismod. Morbi et magna dolor, at mollis massa. Aliquam suscipit varius dui, vel ultrices nunc pulvinar quis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Proin eu erat velit. Maecenas viverra enim in augue auctor vestibulum.</string>
	
	<string name="location_c">Location_C Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer elit nibh, ultrices eget pretium ut, rhoncus quis mi. Praesent tempus vulputate augue suscipit tristique. Fusce interdum risus mi, ut eleifend turpis. Sed lectus nisl, posuere in feugiat nec, congue ut quam. Mauris in felis a orci eleifend volutpat. Aenean placerat arcu in nunc bibendum luctus vel eget mi. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vivamus bibendum sapien a purus interdum non auctor lacus euismod. Morbi et magna dolor, at mollis massa. Aliquam suscipit varius dui, vel ultrices nunc pulvinar quis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Proin eu erat velit. Maecenas viverra enim in augue auctor vestibulum.</string>
	
	<string name="info_synopsis">THE STORY OF THIS GAME IS Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer elit nibh, ultrices eget pretium ut, rhoncus quis mi. Praesent tempus vulputate augue suscipit tristique. Fusce interdum risus mi, ut eleifend turpis. Sed lectus nisl, posuere in feugiat nec, congue ut quam. Mauris in felis</string>
	
	<string name="menu_map">Map</string>
	
	<string name="menu_info">Info</string>
	
	<string name="menu_notes">Notes</string>
	
	<string name="menu_help">Help</string>
	
		
</resources>