<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/isomap"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button4"
        android:layout_alignBottom="@+id/button4"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="34dp"
        android:onClick="launchMap"
        android:text="@string/menu_map" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignLeft="@+id/button3"
        android:layout_marginLeft="47dp"
        android:onClick="launchNotes"
        android:text="@string/menu_notes" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="176dp"
        android:layout_toRightOf="@+id/button1"
        android:onClick="launchInformation"
        android:text="@string/menu_info" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button4"
        android:layout_marginRight="18dp"
        android:layout_marginTop="37dp"
        android:layout_toLeftOf="@+id/button5"
        android:onClick="launchHelp"
        android:text="@string/menu_help" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button3"
        android:layout_marginTop="25dp"
        android:onClick="launchSettings"
        android:text="@string/menu_settings" />

</RelativeLayout>